--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,10 @@
 <head>
- this is my header
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Inconsolata">
+  <style>
+    body {
+      font-family: 'Inconsolata', serif;
+      font-size: 18px;
+    }
+  </style>
 </head>
