--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 
 <html>
-{{ include header.html }}
+{% include header.html %}
 
   <body>
-    <main>
-      {{ content }}
-    </main>
+{{ content }}
   </body>
 </html>
