--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,4 +7,7 @@
       font-size: 18px;
     }
   </style>
+  <script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
 </head>
