--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
-<article>
-  <div class="entry">{{ content }}</div>
-</article>
+<h3>{{page.title}}</h3>
+<div class="article">
+{{ content }}
+</div>
