--- a/main.css
+++ b/main.css
@@ -5,3 +5,19 @@
 .nav li {
   display: inline;
 }
+
+.nav {
+	background-color: #f7f7f7;
+}
+
+.content {
+	padding: 20px;
+}
+
+.article h3 {
+  text-align: center;
+}
+
+.post-list {
+  display: block;
+}
