--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,9 @@
       <ul class="nav nav-tabs">
         <li class="pull-left"><a href="/">home</a></li>
         <li class="pull-left"><a href="/about">about</a></li>
-        <li class="pull-right"><a href="/">github</a></li>
-        <li class="pull-right"><a href="/about">twitter</a></li>
+
+        <li class="pull-right"><a href="https://github.com/sudoprime">github</a></li>
+        <li class="pull-right"><a href="https://twitter.com/sudoprime">twitter</a></li>
       </ul>
     </div>
   </div>
