--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,10 @@
 
 <head>
   <meta charset="UTF-8">
+
+  <!-- tells mobile device to scale page -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="/main.css">
   <link rel="stylesheet" href="/bootstrap.min.css">
