--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,7 @@
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="/main.css">
   <link rel="stylesheet" href="/bootstrap.min.css">
-  <script type="text/javascript"
-    src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  </script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 </head>
 
 <body>
